Editor: fix z-index of readonly tooltip

--- a/app/stylesheets/builtin-pages/components/files-sidebar.less
+++ b/app/stylesheets/builtin-pages/components/files-sidebar.less
@@ -7,6 +7,7 @@
 .files-sidebar {
   &:extend(.hide-scrollbar all);
   position: fixed;
+  z-index: 1;
   left: 200px;
   top: 0;
   width: 200px;
